crates/plotnik-lib/tests/02-parser/recovery_validation/capture_name_with_hyphens.txt
Q = (a) @my-name
------------------ DIAGNOSTICS -------------------
error: capture names must be snake_case
 --> query.ptk:1:9
  |
1 | Q = (a) @my-name
  |         ^^^^^^^^
  |
help: use `@my_name`
  |
1 - Q = (a) @my-name
1 + Q = (a) @my_name
  |
help: captures become fields in the output
